ram/malloc_example.log
kp:ram > gcc 
experiments.md    malloc_example.c  
kp:ram > gcc malloc_example.c -o malloc_example
malloc_example.c:7:9: error: call to undeclared library function 'printf' with type 'int (const char *, ...)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    7 |         printf("Error! Memory allocation failed.\n");
      |         ^
malloc_example.c:7:9: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
malloc_example.c:11:5: error: call to undeclared function 'sleep'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   11 |     sleep(100);
      |     ^
2 errors generated.
kp:ram > gcc malloc_example.c -o malloc_example -Wimplicit-function-declaration
malloc_example.c:7:9: error: call to undeclared library function 'printf' with type 'int (const char *, ...)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    7 |         printf("Error! Memory allocation failed.\n");
      |         ^
malloc_example.c:7:9: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
malloc_example.c:11:5: error: call to undeclared function 'sleep'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   11 |     sleep(100);
      |     ^
2 errors generated.
kp:ram > 

kp:ram > gcc malloc_example.c -o malloc_example
malloc_example.c:6:11: error: call to undeclared library function 'malloc' with type 'void *(unsigned long)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    6 |     ptr = malloc(sizeof(int));
      |           ^
malloc_example.c:6:11: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
malloc_example.c:10:9: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   10 |         exit(EXIT_FAILURE);
      |         ^
malloc_example.c:10:9: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
malloc_example.c:10:14: error: use of undeclared identifier 'EXIT_FAILURE'
   10 |         exit(EXIT_FAILURE);
      |              ^
malloc_example.c:12:5: error: call to undeclared function 'sleep'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   12 |     sleep(100);
      |     ^
4 errors generated.
kp:ram > 
kp:ram > gcc malloc_example.c -o malloc_example
malloc_example.c:12:5: error: call to undeclared function 'sleep'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   12 |     sleep(100);
      |     ^
1 error generated.
kp:ram > gcc malloc_example.c -o malloc_example
kp:ram > ./malloc_example 
^C
kp:ram > gcc malloc_example.c -o malloc_example
kp:ram > ./malloc_example 
kp:ram > gcc malloc_example.c -o malloc_example
kp:ram > ./malloc_example 
Memory allocated. i is 0.
Memory allocated. i is 1.
Memory allocated. i is 2.
Memory allocated. i is 3.
^C
kp:ram > ./malloc_example 
Memory allocated. i is 0.
Memory allocated. i is 1.
Memory allocated. i is 2.
Memory allocated. i is 3.
Memory allocated. i is 4.
Memory allocated. i is 5.
Memory allocated. i is 6.
Memory allocated. i is 7.
Memory allocated. i is 8.
Memory allocated. i is 9.
^C
kp:ram > 
